objects/L2I_Related_Account__c.object
<CustomObject>
    <description>Custom object to model the many-to-many relationships between PAC accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account from which the relationship is being viewed</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the relationship is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reciprocal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to indicate if the relationship is reciprocal</description>
        <label>Is Reciprocal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Cust_Account_Related_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cust Account Related Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The related account</description>
        <label>Related To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Related To)</relationshipLabel>
        <relationshipName>Related_to_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>Sister concern</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>MRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{00000}</displayFormat>
        <label>Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>